fix css - overflow

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@ body {
   height: 100vh;
   background-color: #f8f8f8;
   color: #333;
+  box-sizing: border-box;
 }
 
 .background {
@@ -18,6 +19,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .big-text {
@@ -39,7 +41,8 @@ body {
 }
 
 .logo img {
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
 }
 
 .login-form {
@@ -59,6 +62,8 @@ body {
 .input-group label {
   margin-right: 10px;
   font-size: 18px;
+  display: flex;
+  align-items: center;
 }
 
 .input-group input {
@@ -90,6 +95,10 @@ body {
   font-size: 14px;
 }
 
+.forgot-password a:hover, .register a:hover {
+  color: #000;
+}
+
 button {
   background-color: #ccc;
   border: none;
@@ -107,9 +116,9 @@ button:hover {
 
 footer {
   text-align: center;
-  display: flex;
   background-color: #999;
   width: 100%;
-  flex-flow: column-reverse;
-  margin-top: 38px;
-}
+  padding: 10px 0;
+  position: absolute;
+  bottom: 0;
+  }
